- drakups:
  o fix crash while removing an item (#34413)
- harddrake:
  o offer again to run drakxtv for TV cards (#39609)

Version 10.22 - 27 March 2008

- partitioning wizard lirary: 
  o allow "Use free space" if there is an extended
  partition even if all primary partitions are used (#38804)
  (*old* bug!)
- draksplash:
  o fix reading grub conf (#39346)
- services backend:
  o handle services with "-" as default chkconfig level in more places
- mygtk2:
  o allow to create buttons with stock icons (for drakguard)
- finish-install:
  o really set the superuser password when using simplified user+root
    dialog (#39218)

Version 10.20 - 25 March 2008

- do not run main_quit if not in a main loop (eg: while loading GUI)
  but block window deletion instead (#39230)
- adduserdrake
  o force the password to be utf8 (#23273)
- diskdrake --nfs
  o ensure "nfs-common" is started (#34103)

Version 10.19 - 21 March 2008

- bootloader-config, drakboot:
  o fix device.map if it is not consistent with the system
    (eg: it says hd0 in sdb whereas it now is sda) (#39160)
- diskdrake:
  o fix setting mount point of a /dev/mdX (#39142)
    (regression introduced in 10.8)
- list gspca, ov51x-jpeg and qc-usb-messenger in webcam modules group
- harddrake:
  o recommend using insensitive search (#39136)
  o notify at X11 startup when we switched to free video driver (#39164)
- drakupdate_fstab:
  o do not print added/removed mountpoints with --auto (when run from
    harddrake, like in Mandriva One), but add a --verbose option instead

Version 10.18 - 21 March 2008

- drakfont:
  o fix importing fonts without chkfontpath (#37604)
  o stop restarting XFS server
- diskdrake:
  o keep existing swap UUID (#38877)
- partitioning wizard: do not show error message in wizard mode when
  cancel is clicked (clean wizard window instead)
- finish-install:
  o allow to ask both root and user accounts in the same step
  o replace home path in user config files when renaming a user (#30380)
