@@ -2,6 +2,8 @@
   o fix crash while removing an item (#34413)
 - harddrake:
   o offer again to run drakxtv for TV cards (#39609)
+- diskdrake --fileshare:
+  o do not ask to install nautilus-filesharing if already installed (#39544)
 
 Version 10.22 - 27 March 2008
 
